clusters/homelab/apps/harbor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    name: harbor
  annotations:
    # mTLS component configuration
    mtls/tls-secret-name: "harbor-tls"
