clusters/homelab/apps/harbor/harbor-registry-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-registry-lb
  namespace: harbor
  annotations:
    metallb.universe.tf/address-pool: harbor-pool
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.220
  ports:
  - name: registry
    port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: harbor
    component: registry
